fix: overflow on website reveal

--- a/public/reveal.css
+++ b/public/reveal.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+}
+
 #overlay {
     position: absolute;
     left: 0;
